--- a/personalaccount.html
+++ b/personalaccount.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="css/personalaccount.css" rel="stylesheet">
     <link href="css/fonts.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Навбар -->
     <nav class="navbar navbar-expand navbar-dark">
@@ -18,7 +20,8 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         <img src="img/zaglushka.jpg" alt="Профиль" width="30" height="30">
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -35,11 +38,7 @@
     <!-- Основной контент -->
     <div class="container-fluid">
         <!-- Кнопка для открытия сайдбара на мобильных устройствах -->
-        <button class="btn d-md-none" 
-        type="button" 
-        data-toggle="offcanvas" 
-        aria-label="Открыть меню"
-        >
+        <button class="btn-mobile d-md-none" type="button" data-toggle="offcanvas" aria-label="Открыть меню">
         </button>
         <div class="row">
             <!-- Боковая навигация -->
@@ -81,20 +80,31 @@
                     <!-- Полезные инструменты -->
                     <div id="tools" class="content-section" style="display: none;">
                         <h2>Полезные инструменты</h2>
-                        <div class="calculator">
-                            <h3>Калькулятор ИМТ</h3>
-                            <form id="bmi-calculator">
-                                <div class="form-group">
-                                    <label for="weight">Вес (кг):</label>
-                                    <input type="number" class="form-control" id="weight" required>
+                        <!-- Вкладка с калькулятором -->
+                        <div class="tab-system">
+                            <!-- Заголовок вкладки -->
+                            <div class="tab-header active" onclick="toggleTab(this, 'bmi-tab')">
+                                <h5 class="mb-0">Калькулятор ИМТ</h5>
+                            </div>
+
+                            <!-- Содержимое вкладки -->
+                            <div id="bmi-tab" class="tab-content" style="display: block;">
+                                <div class="calculator">
+                                    <div class="mb-3">
+                                        <label for="height" class="form-label">Рост (см)</label>
+                                        <input type="number" class="form-control" id="height"
+                                            placeholder="Например, 175">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="weight" class="form-label">Вес (кг)</label>
+                                        <input type="number" class="form-control" id="weight"
+                                            placeholder="Например, 70">
+                                    </div>
+                                    <button class="btn w-100" onclick="calculateBMI()">Рассчитать</button>
+
+                                    <div id="bmi-result" class="result"></div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="height">Рост (см):</label>
-                                    <input type="number" class="form-control" id="height" required>
-                                </div>
-                                <button type="submit" class="btn-calculate btn-primary">Рассчитать ИМТ</button>
-                            </form>
-                            <p id="bmi-result"></p>
+                            </div>
                         </div>
                     </div>
 
@@ -120,4 +130,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="scripts/personalaccountscript.js"></script>
 </body>
+
 </html>
